2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Try to prevent dead-locks with GDK when entering main loops.

	* configure.in: Add gmodule-2.0 as dependency.
	* libepc/shell.c, libepc/shell.h: Add epc_shell_leave and
	epc_shell_enter which deal with GDK's big lock when needed.
	* libepc/dispatcher.c: Call epc_shell_unref in finalize, not dispose.
	* libepc/consumer.c: Unlock when calling soup_session_send_message.
	* tests/framework.c: Unlock when calling g_main_loop_run.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Also commit services when not adding any subtypes.

	* libepc/dispatcher.c: Also schedule commmit from epc_service_publish.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcAvahiShell to EpcShell.

	* libepc/dispatcher.c, libepc/publisher.c, libepc/shell.c,
	libepc/shell.h, Makefile.am, tests/framework.c:
	Rename EpcAvahiShell to EpcShell.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Permit access when no authentication handler is installed.

	* libepc/publisher.c: Let epc_publisher_server_auth_cb return TRUE,
	when no authentication handler is found to permit access in that case.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Announce program name based service type.

	* libepc/publisher.c: Announce program name based service type.
	* libepc/dispatcher.c: Move commit step into idle function.
	* libepc/avahi-shell.c, libepc/avahi-shell.h:
	Provide epc_avahi_shell_create_service_type for creating
	program name based service types.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Introduce common API for managing basic, shareable Avahi infrastructure.

	* libepc/avahi-shell.c, libepc/avahi-shell.h: Introduce EpcAvahiShell.
	* libepc/dispatcher.c, tests/framework.c: Use EpcAvahiShell.
	* Makefile.am: Add libepc/avahi-shell.c and libepc/avahi-shell.h.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Merge password dialog from the libank experiment.
