@@ -1,5 +1,14 @@
 2007-11-06  Mathias Hasselmann  <mathias@openismus.com>
 
+	* libepc/consumer.c, libepc/consumer.h: Add epc_consumer_new_for_name
+	and epc_consumer_new_for_name_full for connecting by service name.
+	* libepc/dispatcher.c: Use external _epc_debug variable.
+	* libepc/shell.c: Provide _epc_debug variable.
+	* tests/test-consumer-by-name: Test epc_consumer_new_for_name.
+	* Makefile.am, tests/.gitignore: Add tests/test-consumer-by-name.
+
+2007-11-06  Mathias Hasselmann  <mathias@openismus.com>
+
 	Try to prevent dead-locks with GDK when entering main loops.
 
 	* configure.in: Add gmodule-2.0 as dependency.
